--- a/src/styles/components/Input.module.scss
+++ b/src/styles/components/Input.module.scss
@@ -34,7 +34,7 @@
         }
         @media($tablet){
             &{
-                padding: 15px;
+                padding: 10px 15px;
                 font-size: 1.25rem;
             }
         }
